--- a/week-7/capstone project/homeStyles.css
+++ b/week-7/capstone project/homeStyles.css
@@ -5,6 +5,8 @@
     --secondary-color: #1c3fa8;
     --dark-color: #002240;
     --light-color: #fafafa;
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
 }
 
 
@@ -42,6 +44,12 @@ p{
 
 img{
     width: 100%;
+}
+
+code, pre {
+    background: #333;
+    color: #fff;
+    padding: 10px;
 }
 
 /* Navbar */
@@ -99,6 +107,11 @@ img{
     width: 400px;
     padding: 40px;
     z-index: 100;
+    animation: slideInFromRight 1s ease-in;
+}
+
+.showcase-text {
+    animation: slideInFromLeft 1s ease-in;
 }
 
 .showcase-form .form-control {
@@ -136,6 +149,7 @@ img{
 /* stats */
 .stats {
     padding-top: 100px;
+    animation: slideInFromBottom 1s ease-in;
 }
 
 .stats-heading {
@@ -218,10 +232,76 @@ img{
     padding: 30px;
 }
 
+/* docs-main */
+
+.docs-main h3 {
+    margin: 20px;
+}
+
+.docs-main .grid {
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+}
+
+.docs-main nav li {
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px #ccc solid;
+}
+
+.docs-main nav li:hover {
+    font-weight: bold;
+}
+
 /* footer */
 
 .footer .social a {
     margin: 0 10px;
+}
+
+/* Animations */
+
+@keyframes slideInFromLeft {
+    0%{
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+    
+}
+
+@keyframes slideInFromRight {
+    0%{
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+    
+}
+@keyframes slideInFromTop {
+    0%{
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+    
+}
+@keyframes slideInFromBottom {
+    0%{
+        transform: translateY(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+    
 }
 
 /* Media query 
@@ -231,7 +311,8 @@ Tablet and under */
     .showcase .grid,
     .stats .grid,
     .cli .grid,
-    .cloud .grid {
+    .cloud .grid,
+    .features-main .grid{
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
     }
@@ -241,14 +322,31 @@ Tablet and under */
     .showcase-text {
         text-align: center;
         margin-top: 40px;
+        animation: slideInFromTop 1s ease-in;
     }
     .showcase-form {
         justify-self:center;
         margin: auto;
+        animation: slideInFromBottom 1s ease-in;
     }
     .cli .grid > *:first-child {
         grid-column: 1;
         grid-row: 1;
+    }
+    .features-head,
+    .features-sub-head,
+    .docs-head {
+        text-align: center;
+
+    }
+    .features-head img,
+    .features-sub-head img,
+    .docs-head img {
+    justify-self: center;        
+    }
+    .features-main .grid > *:first-child,
+    .features-main .grid >*:nth-child(2) {
+        grid-column: 1;
     }
 }
 
@@ -339,6 +437,25 @@ Mobile */
     color: #fff;
 }
 
+/* text colors */
+
+.text-primary{
+    color: var(--primary-color);
+}
+
+.text-secondary{
+    color: var(--secondary-color);
+}
+
+.text-dark{
+    color: var(--dark-color);
+}
+
+.text-light{
+   color: var(--light-color);
+
+}
+
 /*Text sizes  */
 .lead {
     font-size: 20px;
@@ -365,6 +482,27 @@ Mobile */
 .text-center {
     text-align: center;
 
+}
+
+/* alert.alert */
+
+.alert {
+    background-color: var(--light-color);
+    padding:10px 20px;
+    font-weight: bold;
+    margin:15px 0;
+}
+
+.alert i {
+    margin-right: 10px;
+}
+
+.alert-success {
+    background-color: var(--success-color);
+    color: #fff;
+}.alert-error {
+    background-color: var(--error-color);
+    color: #fff;
 }
 
 
