--- a/week-7/capstone project/homeStyles.css
+++ b/week-7/capstone project/homeStyles.css
@@ -526,7 +526,11 @@ th, td{
     text-align: center;
 
 }
-
+/* shema */
+.shema1{
+    width: 300px;
+    height: 300px;
+}
 /* alert.alert */
 
 .alert {
